--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ x-airflow-common:
     - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
     - ${AIRFLOW_PROJ_DIR:-.}/downloads:/opt/airflow/downloads
     - ${AIRFLOW_PROJ_DIR:-.}/dependencies:/opt/airflow/dependencies
+    - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
   user: "${AIRFLOW_UID:-50000}:0" 
   depends_on:
     &airflow-common-depends-on
